tests/paczka1/small_fuzzy/91219204.err
Error in line 3: A627 A398 4,7
Error in line 7: ybtLjS A547 25,1
Error in line 11: 8n3IgF0w A398 2,1
Error in line 15: yQ86 A398 80,42
